@@ -1,5 +1,9 @@
 2004-12-18  Sam Steingold  <sds@gnu.org>
 
+	* io.d (SET-READTABLE-CASE): fix a gc-safety bug (from sacla-tests)
+
+2004-12-18  Sam Steingold  <sds@gnu.org>
+
 	* spvw_debug.d (nobject_out1): always use pack_shortest_name for symbols
 
 2004-12-18  Bruno Haible  <bruno@clisp.org>
